--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
 
         <section class="titlebanner">
             <h1 class="title">
-                <a href="index.html" target="_self" class="link">fr-wrld</a>: about wilfredo herrera
+                <a href="index.html" target="_self" class="link"><strong>fr-wrld</strong></a>: about wilfredo herrera
             </h1>
         </section>
 
