--- a/index.html
+++ b/index.html
@@ -19,10 +19,9 @@
 
 <body>
     <section class="bg-img">
-        <!-- <img src="assets/images/scanned-img/flower-1.jpg" alt=""> -->
         <video autoplay muted playsinline loop>
-            <source src="assets/videos/fortune.mp4" type="video/mp4" />
-            <source src="assets/videos/fortune.webm" type="video/webm" />
+            <source src="assets/videos/fortune.mp4" type="video/mp4"/>
+            <source src="assets/videos/webm/fortune.webm" type="video/webm"/>
         </video>
     </section>
 
@@ -30,7 +29,7 @@
 
         <section class="titlebanner">
             <h1 class="title">
-                <a href="index.html" target="_self" class="link">fr-wrld</a>: visual projects by <a href="about.html"
+                <a href="index.html" target="_self" class="link"><strong>fr-wrld</strong></a>: visual projects by <a href="about.html"
                     target="_self" class="link">fredo</a> <img src="assets/images/noun-star-white.svg"
                     alt="eight bit style stars"
                     style="margin: 0; margin-left: -2px; margin-top: 2px; padding: 0; width: 19px; position: absolute; fill: white;">
@@ -48,14 +47,15 @@
         </section>
 
 
-        <h3 class="contact-card" style="font-family: 'DM Mono', monospace; font-weight: 400; font-size: 10px;">*hover
+        <h3 class="contact-card hover-info" style="font-family: 'DM Mono', monospace; font-weight: 400; font-size: 10px;">*hover
             over image for motion</h3>
 
         <section class="prj-grid">
             <!-- Projects start -->
             <section class="prj-item">
                 <section class="prj-img">
-                    <video class="video" muted playsinline loop>
+                    <video class="video" preload="auto" muted playsinline loop>
+                        <source src="assets/videos/purple-treees.mp4" type="video/mp4"/>
                         <source src="assets/videos/webm/purple-treees.webm" type="video/webm" />
                     </video>
                 </section>
@@ -69,7 +69,8 @@
             <section class="prj-item">
                 <section class="prj-img">
                     <video class="video" muted playsinline loop>
-                        <source src="assets/videos/webm/flyman-music.webm" type="video/webm" />
+                        <source src="assets/videos/flyman.mp4" type="video/mp4"/>
+                        <source src="assets/videos/webm/flyman.webm" type="video/webm" />
                     </video>
                 </section>
 
@@ -82,6 +83,7 @@
             <section class="prj-item">
                 <section class="prj-img">
                     <video class="video" muted playsinline loop>
+                        <source src="assets/videos/little-dreamr.mp4" type="video/mp4"/>
                         <source src="assets/videos/webm/little-dreamr.webm" type="video/webm" />
                     </video>
                 </section>
@@ -100,6 +102,7 @@
             <section class="prj-item">
                 <section class="prj-img">
                     <video class="video" muted playsinline loop>
+                        <source src="assets/videos/space-man.mp4" type="video/mp4"/>
                         <source src="assets/videos/webm/space-man.webm" type="video/webm" />
                     </video>
                 </section>
@@ -120,6 +123,7 @@
             <section class="prj-item">
                 <section class="prj-img">
                     <video class="video" muted playsinline loop>
+                        <source src="assets/videos/el-santo_1.mp4" type="video/mp4"/>
                         <source src="assets/videos/webm/el-santo_1.webm" type="video/webm" />
                     </video>
                 </section>
@@ -140,6 +144,7 @@
             <section class="prj-item">
                 <section class="prj-img">
                     <video class="video" muted playsinline loop>
+                        <source src="assets/videos/wavyboxy.mp4" type="video/mp4"/>
                         <source src="assets/videos/webm/wavyboxy.webm" type="video/webm" />
                     </video>
                 </section>
@@ -155,6 +160,7 @@
             <section class="prj-item">
                 <section class="prj-img">
                     <video class="video" muted playsinline loop>
+                        <source src="assets/videos/frosty.mp4" type="video/mp4"/>
                         <source src="assets/videos/webm/frosty.webm" type="video/webm" />
                     </video>
                 </section>
@@ -171,6 +177,7 @@
             <section class="prj-item">
                 <section class="prj-img">
                     <video class="video" muted playsinline loop>
+                        <source src="assets/videos/bloom.mp4" type="video/mp4"/>
                         <source src="assets/videos/webm/bloom.webm" type="video/webm" />
                     </video>
                 </section>
@@ -184,6 +191,7 @@
             <section class="prj-item">
                 <section class="prj-img">
                     <video class="video" muted playsinline loop>
+                        <source src="assets/videos/colins.mp4" type="video/mp4"/>
                         <source src="assets/videos/webm/colins.webm" type="video/webm" />
                     </video>
                 </section>
@@ -197,6 +205,7 @@
             <section class="prj-item">
                 <section class="prj-img">
                     <video class="video" muted playsinline loop>
+                        <source src="assets/videos/black-rivr.mp4" type="video/mp4"/>
                         <source src="assets/videos/webm/black-rivr.webm" type="video/webm" />
                     </video>
                 </section>
@@ -210,6 +219,7 @@
             <section class="prj-item">
                 <section class="prj-img">
                     <video class="video" muted playsinline loop>
+                        <source src="assets/videos/rainbow-road.mp4" type="video/mp4"/>
                         <source src="assets/videos/webm/rainbow-road.webm" type="video/webm" />
                     </video>
                 </section>
@@ -223,6 +233,7 @@
             <section class="prj-item">
                 <section class="prj-img">
                     <video class="video" muted playsinline loop>
+                        <source src="assets/videos/clementines.mp4" type="video/mp4"/>
                         <source src="assets/videos/webm/clementines.webm" type="video/webm" />
                     </video>
                 </section>
@@ -236,6 +247,7 @@
             <section class="prj-item">
                 <section class="prj-img">
                     <video class="video" muted playsinline loop>
+                        <source src="assets/videos/gaming.mp4" type="video/mp4"/>
                         <source src="assets/videos/webm/gaming.webm" type="video/webm" />
                     </video>
                 </section>
@@ -249,6 +261,7 @@
             <section class="prj-item">
                 <section class="prj-img">
                     <video class="video" muted playsinline loop>
+                        <source src="assets/videos/butterfly.mp4" type="video/mp4"/>
                         <source src="assets/videos/webm/butterfly.webm" type="video/webm" />
                     </video>
                 </section>
@@ -262,6 +275,7 @@
             <section class="prj-item">
                 <section class="prj-img">
                     <video class="video" muted playsinline loop>
+                        <source src="assets/videos/spiral-wv.mp4" type="video/mp4"/>
                         <source src="assets/videos/webm/spiral-wv.webm" type="video/webm" />
                     </video>
                 </section>
@@ -275,6 +289,7 @@
             <section class="prj-item">
                 <section class="prj-img">
                     <video class="video" muted playsinline loop>
+                        <source src="assets/videos/glitchy.mp4" type="video/mp4"/>
                         <source src="assets/videos/webm/glitchy.webm" type="video/webm" />
                     </video>
                 </section>
