--- a/about.html
+++ b/about.html
@@ -25,8 +25,11 @@
     <section id="basegrid" style="height: 900px;">
 
         <section class="titlebanner">
-            <h1 class="title">
-                <a href="index.html" target="_self" class="link"><strong>fr-wrld</strong></a>: about wilfredo herrera
+            <h1 class="title" id="english-header">
+                <a href="index.html" target="_self" class="link"><strong>fr-world</strong></a>: about wilfredo herrera
+            </h1>
+            <h1 class="title hidden" id="spanish-header">
+                <a href="index.html" target="_self" class="link"><strong>fr-world</strong></a>: sobre wilfredo herrera
             </h1>
         </section>
 
@@ -81,6 +84,22 @@
     </section>
 
     <div style="height: 200px;"></div>
+
+    <script>
+
+        const englishHeading = document.getElementById('english-header');
+        const spanishHeading = document.getElementById('spanish-header');
+
+        englishHeading.addEventListener('mouseover', () => {
+            englishHeading.classList.add('hidden');
+            spanishHeading.classList.remove('hidden');
+        });
+
+        spanishHeading.addEventListener('mouseout', () => {
+            spanishHeading.classList.add('hidden');
+            englishHeading.classList.remove('hidden');
+        });
+    </script>
 </body>
 
 </html>
