--- a/index.html
+++ b/index.html
@@ -28,11 +28,13 @@
     <section id="base-grid">
 
         <section class="titlebanner">
-            <h1 class="title">
-                <a href="index.html" target="_self" class="link"><strong>fr-wrld</strong></a>: visual projects by <a href="about.html"
-                    target="_self" class="link">fredo</a> <img src="assets/images/noun-star-white.svg"
-                    alt="eight bit style stars"
-                    style="margin: 0; margin-left: -2px; margin-top: 2px; padding: 0; width: 19px; position: absolute; fill: white;">
+            <h1 class="title" id="english-header">
+                <a href="index.html" target="_self" class="link"><strong>fr-world</strong></a>: visual projects by <a href="about.html" target="_self" class="link">fredo</a>
+                <img src="assets/images/noun-star-white.svg" alt="eight-bit style stars" style="margin: 0; margin-left: -2px; margin-top: 2px; padding: 0; width: 19px; position: absolute; fill: white;">
+            </h1>
+            <h1 class="title hidden" id="spanish-header">
+                <a href="index.html" target="_self" class="link"><strong>fr-world</strong></a>: proyectos visuales de <a href="about.html" target="_self" class="link">fredo</a>
+                <img src="assets/images/noun-star-white.svg" alt="eight-bit style stars" style="margin: 0; margin-left: -2px; margin-top: 2px; padding: 0; width: 19px; position: absolute; fill: white;">
             </h1>
         </section>
 
@@ -350,6 +352,18 @@
             });
         }
 
+        const englishHeading = document.getElementById('english-header');
+        const spanishHeading = document.getElementById('spanish-header');
+
+        englishHeading.addEventListener('mouseover', () => {
+            englishHeading.classList.add('hidden');
+            spanishHeading.classList.remove('hidden');
+        });
+
+        spanishHeading.addEventListener('mouseout', () => {
+            spanishHeading.classList.add('hidden');
+            englishHeading.classList.remove('hidden');
+        });
 
         // document.addEventListener("DOMContentLoaded", function() {
         //     const videoContainer = document.querySelector("#prj1");
