--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
 
     <section id="basegrid" style="height: 900px;">
 
-        <section class="titlebanner">
+        <section class="title-banner">
             <h1 class="title" id="english-header">
                 <a href="index.html" target="_self" class="link"><strong>fr-world</strong></a>: about wilfredo herrera
             </h1>
