--- a/index.html
+++ b/index.html
@@ -359,7 +359,6 @@
 
         };
 
-        if (window.innerWidth > 740) {
             document.addEventListener('DOMContentLoaded', function () {
                 const videos = document.querySelectorAll('.video');
 
@@ -373,7 +372,7 @@
                     });
                 });
             });
-        }
+ 
 
         const isSafari = /^((?!chrome|android).)*safari/i.test(navigator.userAgent);
 
@@ -413,21 +412,27 @@
             englishLanding.classList.remove('hidden');
         });
 
-        // document.addEventListener("DOMContentLoaded", function() {
-        //     const videoContainer = document.querySelector("#prj1");
-        //     const video = document.getElementById("prj-vid");
+        // Mobile project images
+        if (window.innerWidth > 768) {
+            const projectImage = document.getElementsByClassName('prj-img');
 
-        //     videoContainer.addEventListener("mouseenter", function() {
-        //         video.play();
-        //         videoContainer.classList.add("play");
-        //     });
+            projectImage.addEventListener('play', () => {
+                projectImage.classList.add('hidden');
+            });
 
-        //     videoContainer.addEventListener("mouseleave", function() {
-        //         video.pause();
-        //         video.currentTime = 0;
-        //         videoContainer.classList.remove("play");
-        //     });
-        // });
+            const isSafari = /^((?!chrome|android).)*safari/i.test(navigator.userAgent);
+
+            if (isSafari) {
+                const videos = document.querySelectorAll('.video');
+                videos.forEach(video => {
+                    video.setAttribute('playsinline', '');
+                    video.setAttribute('muted', '');
+                    video.setAttribute('autoplay', '');
+                });
+            }
+        }
+
+        
 
     </script>
 </body>
