--- a/index.html
+++ b/index.html
@@ -329,7 +329,13 @@
         <div id="load-more"> load more </div>
         <div style="height: 150px;"></div>
 
+        <footer>
+            <h4 class="font">© 2024 WILFREDO HERRERA. ALL RIGHTS RESERVED</h4>
+        </footer>
+
     </section>
+
+    
 
 
     <script>
