--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
     <section id="base-grid">
 
         <section class="title-banner">
-            <h1 class="title" id="english-header">
-                <a href="index.html" target="_self" class="link"><strong>fr-world</strong></a>: <span> visual projects by <a href="about.html" target="_self" class="link">fredo</a>
+            <h1 class="title" id="spanish-header">
+                <a href="index.html" target="_self" class="link"><strong>fr-world</strong></a>: proyectos visuales de <a href="about.html" target="_self" class="link">fredo</a>
                 <img src="assets/images/noun-star-white.svg" alt="eight-bit style stars" style="margin: 0; margin-left: -2px; margin-top: 2px; padding: 0; width: 19px; position: absolute; fill: white;">
             </h1>
-            <h1 class="title hidden" id="spanish-header">
-                <a href="index.html" target="_self" class="link"><strong>fr-world</strong></a>: proyectos visuales de <a href="about.html" target="_self" class="link">fredo</a>
+            <h1 class="title hidden" id="english-header">
+                <a href="index.html" target="_self" class="link"><strong>fr-world</strong></a>: <span> visual projects by <a href="about.html" target="_self" class="link">fredo</a>
                 <img src="assets/images/noun-star-white.svg" alt="eight-bit style stars" style="margin: 0; margin-left: -2px; margin-top: 2px; padding: 0; width: 19px; position: absolute; fill: white;">
             </h1>
         </section>
