--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
     <section class="bg-img">
         <video autoplay muted playsinline loop>
             <source src="assets/videos/fortune.mp4" type="video/mp4"/>
-            <source src="assets/videos/webm/fortune.webm" type="video/webm"/>
+            <source src="assets/videos/webm/fortune.webm" type="video/webm; codecs='vp8, vorbis'"/>
         </video>
     </section>
 
-    <div style="width: 100%; position: fixed; top: 0; z-index: 1;" offset="0%">
+    <div class="marquee" style="width: 100%; position: fixed; top: 0; z-index: 1;" offset="0%">
         <div class="marquee-container font" id="marqueeContainer">
             <div class="marquee-text font" id="marqueeText">
                 HI HELLO WELCOME TO MY PORTFOLIO&nbsp; &nbsp;HOPE YOU ARE HAVING A WONDERFUL DAY&nbsp; &nbsp;INSIDE YOU WILL FIND COLORFUL EXPERIMENTS CREATED (mostly) USING TOUCHDESIGNER&nbsp; &nbsp;ENJOY&nbsp; &nbsp;LET'S COLLABORATE ON SOME FUN VISUALS&nbsp; &nbsp;
