--- a/about.html
+++ b/about.html
@@ -93,21 +93,7 @@
 
     <div style="height: 200px;"></div>
 
-    <script>
-
-        const englishHeading = document.getElementById('english-header');
-        const spanishHeading = document.getElementById('spanish-header');
-
-        englishHeading.addEventListener('click', () => {
-            englishHeading.classList.add('hidden');
-            spanishHeading.classList.remove('hidden');
-        });
-
-        spanishHeading.addEventListener('click', () => {
-            spanishHeading.classList.add('hidden');
-            englishHeading.classList.remove('hidden');
-        });
-    </script>
+    <script src="scripts/script.js"></script>
 </body>
 
 </html>
