--- a/testing.html
+++ b/testing.html
@@ -1,23 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cursor Text</title>
     <style>
-        .sprite-logo {
-            width: 16px;
-            height: 354px;
+        body {
+            margin: 0;
             overflow: hidden;
+        }
+
+        .cursor-text {
+            position: absolute;
+            display: none;
+            pointer-events: none;
+            white-space: nowrap;
+            background-color: rgba(0, 0, 0, 0.8);
+            color: #fff;
+            padding: 5px 10px;
+            border-radius: 5px;
+            font-size: 14px;
+            z-index: 9999;
+            transform: translate(-50%, -50%);
+            /* Center the text on the cursor */
         }
     </style>
 </head>
+
 <body>
-    <svg id="sprite-logo" viewBox="0 0 460 354">
-        <path d="M.7 340.5h14.5c.1 0 .3 0 .4.1.1.1.1.2.1.4v3.1c0 .2 0 .3-.1.4-.1.1-.2.1-.4.1h-4.5c-.1 0-.3 0-.4.1-.1.1-.1.2-.1.4v4.3c0 .2 0 .3.1.4s.2.1.4.1h4.5c.1 0 .3 0 .4.1.1.1.1.2.1.4v3.1c0 .2 0 .3-.1.4-.1.1-.2.1-.4.1H.7c-.1 0-.3 0-.4-.1s-.1-.2-.1-.4v-3.1c0-.1 0-.3.1-.4.1-.1.2-.1.4-.1h5c.1 0 .3 0 .4-.1s.1-.2.1-.4v-4.3c0-.1 0-.3-.1-.4-.1 0-.2-.1-.4-.1h-5c-.1 0-.3 0-.4-.1-.1-.1-.1-.2-.1-.4V341c0-.1 0-.3.1-.4.2 0 .3-.1.4-.1M9.9 327.6v-1.8c0-.1 0-.2-.1-.3-.1-.1-.2-.1-.3 0-.4.1-.8.3-1.2.5-.5.2-.9.4-1.3.5-.1.1-.2.1-.2.2s.1.1.2.2l2.6 1c.1.1.2.1.3 0v-.3zm-9.2 1.2c-.1-.1-.2-.1-.3-.3-.1-.1-.1-.3-.1-.4v-2.9c0-.1 0-.3.1-.4l.3-.3 14.4-6.1c.1-.1.3 0 .4 0 .1.1.2.2.2.4v3.5c0 .2 0 .3-.1.4l-.3.3-1.3.8-.3.3c-.1.1-.1.3-.1.4v4.4c0 .2 0 .3.1.4l.3.3 1.3.6c.1.1.2.1.3.3.1.1.1.3.1.4V334.7c0 .1-.1.1-.1.2-.1 0-.1.1-.2.1s-.2 0-.3-.1L.7 328.8zM7.4 309.1v-2.2c0-.2 0-.3-.1-.5s-.2-.4-.3-.5c-.1-.2-.3-.3-.5-.4-.2-.1-.4-.1-.7-.1-.1 0-.3 0-.5.1-.2 0-.4.1-.6.2s-.3.3-.4.5c-.1.2-.2.4-.2.7v2.2c0 .1 0 .3.1.4.1.1.2.1.4.1h2.2c.1 0 .3 0 .4-.1.1-.2.2-.3.2-.4m8.3 1v3.1c0 .1 0 .3-.1.4s-.2.1-.4.1H.7c-.1 0-.3 0-.4-.1-.1-.1-.1-.2-.1-.4v-6.5c0-.8.1-1.5.4-2.2.3-.7.7-1.3 1.2-1.7.5-.5 1.1-.9 1.8-1.1.7-.3 1.4-.4 2.2-.4.5 0 .9.1 1.3.2s.9.3 1.3.4c.4.2.8.4 1.1.7.3.3.6.6.8.9.1.1.2.2.3.2s.2 0 .3-.1c.7-.5 1.4-1.1 2.2-1.7.7-.6 1.4-1.1 2.1-1.6.1-.1.2-.1.4-.1.1 0 .2.1.2.3v3.9c0 .1 0 .3-.1.4-.1.2-.2.3-.3.4-.6.4-1.2.9-1.8 1.3s-1.2.9-1.8 1.3c-.1.1-.2.2-.3.4-.1.2-.1.3-.1.4v.5c0 .1 0 .3.1.4s.2.1.4.1h3.4c.1 0 .3 0 .4.1v.4M15.3 290.4L.8 296.7c-.2.1-.3.1-.4 0s-.2-.2-.2-.4v-3.4c0-.1 0-.3.1-.4l.3-.3 8.5-3.7c.1-.1.2-.2.2-.3s-.1-.2-.2-.3l-8.5-3.6-.3-.3c-.1-.1-.1-.3-.1-.4v-3.4c0-.2.1-.3.2-.3.1-.1.2-.1.3 0l14.5 6.3.3.3c.1.1.1.3.1.4v2.8c0 .1 0 .3-.1.4 0 .1-.1.2-.2.3M9.9 270.8V269c0-.1 0-.2-.1-.3s-.2-.1-.3 0c-.4.1-.8.3-1.2.5-.5.2-.9.4-1.3.5-.1.1-.2.1-.2.2s.1.1.2.2l2.6 1c.1.1.2.1.3 0v-.3zM.7 272c-.1-.1-.2-.1-.3-.3-.1-.1-.1-.3-.1-.4v-2.9c0-.1 0-.3.1-.4l.3-.3 14.4-6.1c.1-.1.3 0 .4 0 .1.1.2.2.2.4v3.5c0 .2 0 .3-.1.4l-.3.3-1.3.8-.3.3c-.1.1-.1.3-.1.4v4.4c0 .2 0 .3.1.4l.3.3 1.3.6c.1.1.2.1.3.3.1.1.1.3.1.4V277.9c0 .1-.1.1-.1.2-.1 0-.1.1-.2.1s-.2 0-.3-.1L.7 272zM7.4 252.3v-2.2c0-.2 0-.3-.1-.5s-.2-.3-.3-.5c-.1-.2-.3-.3-.5-.4-.2-.1-.4-.1-.7-.1-.1 0-.3 0-.5.1-.2 0-.4.1-.6.2-.2.1-.3.3-.4.5s-.2.4-.2.7v2.2c0 .1 0 .3.1.4.1.1.2.1.4.1h2.2c.1 0 .3 0 .4-.1.1-.2.2-.3.2-.4m8.3 1v3.1c0 .1 0 .3-.1.4s-.2.1-.4.1H.7c-.1 0-.3 0-.4-.1s-.1-.2-.1-.4v-6.5c0-.8.1-1.5.4-2.2s.7-1.3 1.2-1.7c.5-.5 1.1-.9 1.8-1.1.7-.3 1.4-.4 2.2-.4.5 0 .9.1 1.3.2s.9.3 1.3.4c.4.2.8.4 1.1.7.3.3.6.6.8.9.1.1.2.2.3.2s.2 0 .3-.1c.7-.5 1.4-1.1 2.2-1.7.7-.6 1.4-1.1 2.1-1.6.1-.1.2-.1.4-.1.1 0 .2.1.2.3v3.9c0 .1 0 .3-.1.4-.1.2-.2.3-.3.4-.6.4-1.2.9-1.8 1.3-.6.4-1.2.9-1.8 1.3-.1.1-.2.2-.3.4s-.1.3-.1.4v.5c0 .1 0 .3.1.4.1.1.2.1.4.1h3.4c.1 0 .3 0 .4.1v.4M11.8 233.2v-1.6c0-.4 0-.8-.1-1.2-.1-.4-.3-.8-.6-1.1s-.7-.6-1.2-.8c-.5-.2-1.2-.3-2-.3s-1.5.1-2 .3-.9.5-1.2.8c-.3.3-.5.7-.6 1.1-.1.4-.1.8-.1 1.2v1.6c0 .1 0 .3.1.4.1.1.2.1.4.1h6.6c.1 0 .3 0 .4-.1.3-.2.3-.3.3-.4m3.4 4.6H.7c-.1 0-.3 0-.4-.1-.1-.1-.1-.2-.1-.4v-5.7c0-2.2.6-3.9 1.9-5.3.7-.7 1.5-1.3 2.5-1.7s2.1-.6 3.3-.6 2.3.2 3.3.6c1 .4 1.8 1 2.5 1.7.6.7 1.1 1.5 1.4 2.4.3.9.5 1.9.5 3v5.7c0 .1 0 .3-.1.4 0-.1-.1 0-.3 0M4.7 202h.9c.1 0 .3 0 .4-.1s.1-.2.1-.4v-5.6c0-.1 0-.3.1-.4.1-.1.2-.1.4-.1h3c.1 0 .3 0 .4.1.1.1.1.2.1.4v5.6c0 .1 0 .3.1.4.1.1.2.1.4.1h4.7c.1 0 .3 0 .4.1.1.1.1.2.1.4v3.1c0 .1 0 .3-.1.4-.1.1-.2.1-.4.1H.7c-.1 0-.3 0-.4-.1s-.1-.2-.1-.4v-10.5c0-.1 0-.3.1-.4.1-.1.2-.1.4-.1h2.9c.1 0 .3 0 .4.1s.1.2.1.4v6.4c0 .1 0 .3.1.4.2.1.3.1.5.1M15.7 184.7v3.1c0 .2 0 .3-.1.4-.1.1-.2.1-.4.1H.8c-.1 0-.3 0-.4-.1s-.1-.2-.1-.4v-3.1c0-.1 0-.3.1-.4.1-.1.2-.1.4-.1h14.5c.1 0 .3 0 .4.1v.4M12.3 165.9h2.9c.1 0 .3 0 .4.1.1.1.1.2.1.4v10.4c0 .2 0 .3-.1.4-.1.1-.2.1-.4.1H.7c-.1 0-.3 0-.4-.1s-.1-.2-.1-.4v-3.1c0-.1 0-.3.1-.4.1-.1.2-.1.4-.1h10.6c.1 0 .3 0 .4-.1.1-.1.1-.2.1-.4v-6.2c0-.1 0-.3.1-.4.2-.1.3-.2.4-.2M.8 143.4h14.5c.1 0 .3 0 .4.1.1.1.1.2.1.4v3.1c0 .1 0 .3-.1.4-.1.1-.2.1-.4.1H8.4c-.1 0-.2.1-.2.2s0 .2.1.3l5.7 3.5c.1.1.2.2.2.3 0 .2-.1.3-.2.4l-5.7 3.5c-.1.1-.2.2-.1.3 0 .1.1.2.2.2h6.8c.1 0 .3 0 .4.1.1.1.1.2.1.4v3.1c0 .1 0 .3-.1.4-.1.1-.2.1-.4.1H.8c-.1 0-.3 0-.4-.1s-.1-.2-.1-.4v-2.9c0-.1 0-.3.1-.4.1-.2.2-.3.3-.3l6-4c.1-.1.2-.2.2-.3s-.1-.2-.2-.3l-6-4c-.1-.1-.2-.2-.3-.4s-.1-.3-.1-.4v-2.9c0-.1 0-.3.1-.4.1 0 .2-.1.4-.1M9.9 119v-1.8c0-.1 0-.2-.1-.3s-.2-.1-.3 0c-.4.1-.8.3-1.2.5-.5.2-.9.4-1.3.5-.1.1-.2.1-.2.2s.1.1.2.2l2.6 1c.1.1.2.1.3 0v-.3zm-9.2 1.2c-.1-.1-.2-.1-.3-.3-.1-.1-.1-.3-.1-.4v-2.9c0-.1 0-.3.1-.4l.3-.3 14.4-6.1c.1-.1.3 0 .4 0 .1.1.2.2.2.4v3.5c0 .2 0 .3-.1.4l-.3.3-1.3.6-.3.3c-.1.1-.1.3-.1.4v4.4c0 .2 0 .3.1.4l.3.3 1.3.6c.1.1.2.1.3.3.1.1.1.3.1.4V125.9c0 .1-.1.1-.1.2-.1 0-.1.1-.2.1s-.2 0-.3-.1L.7 120.2zM7.4 100.5v-2.2c0-.2 0-.3-.1-.5s-.2-.3-.3-.5c-.1-.2-.3-.3-.5-.4s-.4-.1-.7-.1c-.1 0-.3 0-.5.1-.2 0-.4.1-.6.2s-.3.3-.4.5-.2.4-.2.7v2.2c0 .1 0 .3.1.4.1.1.2.1.4.1h2.2c.1 0 .3 0 .4-.1.1-.2.2-.3.2-.4m8.3 1v3.1c0 .1 0 .3-.1.4-.1.1-.2.1-.4.1H.7c-.1 0-.3 0-.4-.1s-.1-.2-.1-.4v-6.5c0-.8.1-1.5.4-2.2s.7-1.3 1.2-1.7c.5-.5 1.1-.8 1.8-1.1.7-.3 1.4-.4 2.2-.4.5 0 .9.1 1.3.2s.9.3 1.3.4c.4.2.8.4 1.1.7.3.3.6.6.8.9.1.1.2.2.3.2s.2 0 .3-.1c.7-.5 1.4-1.1 2.2-1.7.7-.6 1.4-1.1 2.1-1.6.1-.1.2-.1.4-.1.1 0 .2.1.2.3v3.9c0 .1 0 .3-.1.4-.1.2-.2.3-.3.4-.6.4-1.2.9-1.8 1.3s-1.2.9-1.8 1.3c-.1.1-.2.2-.3.4s-.1.3-.1.4v.5c0 .1 0 .3.1.4.1.1.2.1.4.1h3.4c.1 0 .3 0 .4.1v.4M11.6 71.3c.7.4 1.3.8 1.8 1.3s1 1 1.4 1.6.7 1.3.9 2 .3 1.5.3 2.4c0 1.1-.2 2.1-.6 3.1-.4 1-1 1.8-1.7 2.5s-1.6 1.3-2.5 1.7c-1 .4-2 .6-3.1.6S6 86.3 5 85.9s-1.8-1-2.5-1.7-1.3-1.6-1.7-2.5c-.4-1-.6-2-.6-3.1 0-.9.1-1.7.3-2.5.2-.7.5-1.4.9-2s.8-1.1 1.4-1.6 1.1-.9 1.8-1.3c.1-.1.2-.1.4 0 .1 0 .2.1.3.2l1.2 2.9c.1.1.1.3 0 .4s-.1.2-.3.3c-.6.4-1.1.9-1.5 1.5-.3.6-.5 1.3-.5 2.1 0 .5.1 1 .3 1.5.2.5.5.9.9 1.2.4.3.8.6 1.3.8.5.2 1 .3 1.5.3s1.1-.1 1.5-.3c.5-.2.9-.5 1.3-.8.4-.3.7-.8.9-1.2.2-.5.3-1 .3-1.5 0-.8-.2-1.4-.6-2.1-.4-.6-.9-1.1-1.5-1.5l-.3-.3c-.1-.1-.1-.3 0-.4l1.2-2.9c.1-.1.1-.2.3-.2.1.1.2.1.3.1M.7 52.1h14.5c.1 0 .3 0 .4.1.1.1.1.2.1.4v3.1c0 .2 0 .3-.1.4s-.2.1-.4.1h-4.5c-.1 0-.3 0-.4.1-.1.1-.1.2-.1.4V61c0 .2 0 .3.1.4s.2.1.4.1h4.5c.1 0 .3 0 .4.1.1.1.1.2.1.4v3.1c0 .2 0 .3-.1.4s-.2.1-.4.1H.7c-.1 0-.3 0-.4-.1s-.1-.2-.1-.4V62c0-.1 0-.3.1-.4s.2-.1.4-.1h5c.1 0 .3 0 .4-.1s.1-.2.1-.4v-4.3c0-.1 0-.3-.1-.4s-.2-.1-.4-.1h-5c-.1 0-.3 0-.4-.1s-.1-.2-.1-.4v-3.1c0-.1 0-.3.1-.4.2 0 .3-.1.4-.1M15.7 41.1v3.1c0 .2 0 .3-.1.4s-.2.1-.4.1H.8c-.1 0-.3 0-.4-.1s-.1-.2-.1-.4v-3.1c0-.1 0-.3.1-.4s.2-.1.4-.1h14.5c.1 0 .3 0 .4.1v.4M15.3 28.6L.9 34.9c-.2.1-.3.1-.4 0s-.2-.2-.2-.4v-3.4c0-.1 0-.3.1-.4l.3-.3 8.5-3.7c.1-.1.2-.2.2-.3 0-.1-.1-.2-.2-.3L.7 22.5l-.3-.3c-.1-.1-.1-.3-.1-.4v-3.4c0-.2.1-.3.2-.3.1-.1.2-.1.3 0l14.5 6.3.3.3c.1.1.1.3.1.4v2.8c0 .1 0 .3-.1.4-.1.2-.2.3-.3.3M4.6 8.2h.9c.1 0 .3 0 .4-.1.1-.1.1-.2.1-.4V2.1c0-.1 0-.3.1-.4s.2-.1.4-.1h2.9c.1 0 .3 0 .4.1.1.1.1.2.1.4v5.6c0 .1 0 .3.1.4.1.1.2.1.4.1h.8c.1 0 .3 0 .4-.1.1-.1.1-.2.1-.4V1.2c0-.1 0-.3.1-.4s.2-.1.4-.1h2.9c.1 0 .3 0 .4.1.1.1.1.2.1.4v10.6c0 .1 0 .3-.1.4s-.2.1-.4.1H.7c-.1 0-.3 0-.4-.1s-.1-.2-.1-.4V1.2c0-.1 0-.3.1-.4S.5.7.7.7h2.9c.1 0 .3 0 .4.1s.1.2.1.4v6.5c0 .1 0 .3.1.4.2.1.3.1.4.1"></path>
-    </svg>
+    <div class="cursor-text" id="cursorText">Hover over image for motion</div>
 
+    <script>
+        document.addEventListener("DOMContentLoaded", () => {
+            const cursorText = document.getElementById("cursorText");
+            let timer;
 
+            document.addEventListener("mousemove", (e) => {
+                cursorText.style.transform = `translate(${e.clientX}px, ${e.clientY}px)`;
+
+                clearTimeout(timer);
+                cursorText.style.display = "block";
+
+                timer = setTimeout(() => {
+                    cursorText.style.display = "none";
+                }, 1000); // Adjust the timeout (in milliseconds) as needed
+            });
+        });
+
+    </script>
 </body>
-</html>
 
+</html>
