--- a/index.html
+++ b/index.html
@@ -81,8 +81,9 @@
             </h2>
         </section>
 
-
-        <h3 id="cursorText" class="cursor-text contact-card" style="font-family: 'DM Mono', monospace; font-weight: 400; font-size: 10px; left: 10px; top: 0;">hover over image for motion</h3>
+        <div>
+            <h3 id="cursorText" class="cursor-text contact-card" style="font-family: 'DM Mono', monospace; font-weight: 400; font-size: 10px; left: 10px; top: 0;">hover over image for motion</h3>
+        </div>
 
         <section class="prj-grid">
             <!-- Projects start -->
