--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="marquee" style="width: 100%; position: fixed; z-index: 1;" offset="0%">
         <div class="marquee-container" id="marqueeContainer">
             <div class="marquee-text font" id="marqueeText">
-                HI HELLO WELCOME TO MY PORTFOLIO&nbsp; &nbsp;HOPE YOU ARE HAVING A WONDERFUL DAY&nbsp; &nbsp;ENJOY&nbsp; &nbsp;LET'S COLLABORATE ON SOME FUN VISUALS&nbsp; &nbsp;
+                HI HELLO AND WELCOME&nbsp; &nbsp;HOPE YOU ARE HAVING A WONDERFUL DAY&nbsp; &nbsp;ENJOY&nbsp; &nbsp;LET'S COLLABORATE ON SOME FUN VISUALS&nbsp; &nbsp;
             </div>
         </div>
     </div>
@@ -51,7 +51,7 @@
         <section class="landing-welcome">
             <div style="display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center;">
                 <button id="enter">entrar</button>
-                <h3 class="font" style="font-size: 9px;"><em>chrome</em> or <em>firefox</em> recommended</h3>
+                <h3><em>chrome</em> or <em>firefox</em> recommended</h3>
             </div>
         </section>
 
@@ -73,7 +73,7 @@
 
         <section class="contact-card">
             <h2> say hi:
-                <a href="mailto:fredo25w@gmail.com" target="_blank" class="link">email</a>,
+                <a href="mailto:fredo25w@gmail.com" target="_blank" class="link">e-mail</a>,
                 <a href="https://www.instagram.com/bebofrik/" target="_blank" class="link">gram</a>,
                 <a href="https://www.youtube.com/channel/UC5oNJt-0mgmcMfv42GhqxZA" target="_blank"
                     class="link">utube</a>,
@@ -82,7 +82,7 @@
         </section>
 
         <div>
-            <h3 id="cursorText" class="cursor-text contact-card" style="font-family: 'DM Mono', monospace; font-weight: 400; font-size: 10px; left: 10px; top: 0;">hover over image for motion</h3>
+            <h3 id="cursorText" class="cursor-text contact-card" style="font-family: 'DM Mono', monospace; font-weight: 400; font-size: 10px; left: 10px; top: -25px;">hover over image for motion</h3>
         </div>
 
         <section class="prj-grid">
