--- a/index.html
+++ b/index.html
@@ -27,15 +27,21 @@
 
     <div class="marquee" style="width: 100%; position: fixed; z-index: 1;" offset="0%">
         <div class="marquee-container" id="marqueeContainer">
-            <div class="marquee-text font" id="marqueeText">
-                HI HELLO AND WELCOME&nbsp; &nbsp;HOPE YOU ARE HAVING A WONDERFUL DAY&nbsp; &nbsp;ENJOY&nbsp; &nbsp;LET'S COLLABORATE ON SOME FUN VISUALS&nbsp; &nbsp;
+            <div class="marquee-text" id="marqueeText">
+                HI HELLO AND WELCOME&nbsp; &nbsp;HOPE YOU ARE HAVING A WONDERFUL DAY&nbsp; &nbsp;LOOK AROUND&nbsp; &nbsp;STAY A WHILE&nbsp; &nbsp;LET'S COLLABORATE ON SOME FUN VISUALS&nbsp; &nbsp;SOME ALBUMS YOU'LL ENJOY:&nbsp;
+                    Talkie Walkie (2004) by AIR&nbsp; &nbsp;
+                    We've Been There (1978) by Mark and Suzann Farmer&nbsp; &nbsp;
+                    hella (˃̣̣̥╭╮˂̣̣̥) ✧ ♡ ‧º·˚ (2024) by 1999 WRITE THE FUTURE&nbsp; &nbsp;
+                    Viva! La Woman (1996) by Cibo Matto&nbsp; &nbsp;
+                    The Awakening (1970) by Ahmad Jamal Trio&nbsp; &nbsp;
+
             </div>
         </div>
     </div>
 
     
 
-    <section class="landing">
+    <section class="landing-content">
 
         <section class="landing-banner">
             <h1 class="title" id="landing-banner-sp">
@@ -58,7 +64,7 @@
     </section>
 
 
-    <section id="base-grid">
+    <section id="main-grid">
 
         <section class="title-banner">
             <h1 class="title" id="spanish-header">
@@ -82,7 +88,7 @@
         </section>
 
         <div>
-            <h3 id="cursorText" class="cursor-text contact-card" style="font-family: 'DM Mono', monospace; font-weight: 400; font-size: 10px; left: 10px; top: -25px;">hover over image for motion</h3>
+            <h3 id="cursorText" class="cursor-text" style="font-family: 'DM Mono', monospace; font-weight: 400; font-size: 10px; left: 10px; top: 0;">hover over image for motion</h3>
         </div>
 
         <section class="prj-grid">
@@ -341,7 +347,7 @@
         <div style="height: 150px;"></div>
 
         <footer>
-            <h4 class="font" style="font-size: 11px;">© 2024 WILFREDO HERRERA. ALL RIGHTS RESERVED</h4>
+            <h4 style="font-family: var(--baseline-ff); font-size: 11px;">© 2024 WILFREDO HERRERA. ALL RIGHTS RESERVED</h4>
         </footer>
 
     </section>
