--- a/index.html
+++ b/index.html
@@ -19,16 +19,17 @@
 
 <body>
     <section class="bg-img">
-        <video autoplay muted playsinline loop>
+        <video id="bgVideo" autoplay muted playsinline loop>
             <source src="assets/videos/fortune.mp4" type="video/mp4"/>
             <source src="assets/videos/webm/fortune.webm" type="video/webm; codecs='vp8, vorbis'"/>
         </video>
+        <div id="carouselContainer" class="carousel-container"></div>
     </section>
 
     <div class="marquee" style="width: 100%; position: fixed; z-index: 1;" offset="0%">
         <div class="marquee-container" id="marqueeContainer">
             <div class="marquee-text" id="marqueeText">
-                HI HELLO AND WELCOME&nbsp; &nbsp;HOPE YOU ARE HAVING A WONDERFUL DAY&nbsp; &nbsp;LOOK AROUND&nbsp; &nbsp;STAY A WHILE&nbsp; &nbsp;LET'S COLLABORATE ON SOME FUN VISUALS&nbsp; &nbsp;SOME ALBUMS YOU'LL ENJOY:&nbsp;
+                HI HELLO AND WELCOME&nbsp; &nbsp;LOOK AROUND&nbsp; &nbsp;STAY A WHILE&nbsp; &nbsp;SOME ALBUMS YOU'LL ENJOY:&nbsp;
                     Talkie Walkie (2004) by AIR&nbsp; &nbsp;
                     We've Been There (1978) by Mark and Suzann Farmer&nbsp; &nbsp;
                     hella (˃̣̣̥╭╮˂̣̣̥) ✧ ♡ ‧º·˚ (2024) by 1999 WRITE THE FUTURE&nbsp; &nbsp;
@@ -347,7 +348,7 @@
         <div style="height: 150px;"></div>
 
         <footer>
-            <h4 style="font-family: var(--baseline-ff); font-size: 11px;">© 2024 WILFREDO HERRERA. ALL RIGHTS RESERVED</h4>
+            <h4 style="font-family: 'DM Mono', monospace; font-size: 11px; font-weight: 300;">© 2024 WILFREDO HERRERA. ALL RIGHTS RESERVED</h4>
         </footer>
 
     </section>
