--- a/testing.html
+++ b/testing.html
@@ -1,54 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cursor Text</title>
-    <style>
-        body {
-            margin: 0;
-            overflow: hidden;
-        }
-
-        .cursor-text {
-            position: absolute;
-            display: none;
-            pointer-events: none;
-            white-space: nowrap;
-            background-color: rgba(0, 0, 0, 0.8);
-            color: #fff;
-            padding: 5px 10px;
-            border-radius: 5px;
-            font-size: 14px;
-            z-index: 9999;
-            transform: translate(-50%, -50%);
-            /* Center the text on the cursor */
-        }
-    </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Image Carousel for Safari</title>
+<style>
+  body, html {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+  }
+  .carousel-container {
+    position: relative;
+    width: 100%;
+    height: 100vh; /* Full height of viewport */
+    overflow: hidden;
+  }
+  .carousel-image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center;
+    transition: opacity 1s ease-in-out;
+  }
+</style>
 </head>
-
 <body>
-    <div class="cursor-text" id="cursorText">Hover over image for motion</div>
+<div id="carouselContainer" class="carousel-container"></div>
 
-    <script>
-        document.addEventListener("DOMContentLoaded", () => {
-            const cursorText = document.getElementById("cursorText");
-            let timer;
+<script>
+  function isSafari() {
+    const ua = navigator.userAgent.toLowerCase();
+    return ua.indexOf('safari') !== -1 && ua.indexOf('chrome') === -1;
+  }
 
-            document.addEventListener("mousemove", (e) => {
-                cursorText.style.transform = `translate(${e.clientX}px, ${e.clientY}px)`;
+  if (isSafari()) {
+    const carouselContainer = document.getElementById('carouselContainer');
+    carouselContainer.innerHTML = `
+      <div class="carousel-image" style="background-image: url('/assets/images/scanned-img/flower-1.jpg');"></div>
+      <div class="carousel-image" style="background-image: url('/assets/images/scanned-img/tree-1.jpg');"></div>
+      <div class="carousel-image" style="background-image: url('/assets/images/scanned-img/pond.jpeg');"></div>
+      <div class="carousel-image" style="background-image: url('/assets/images/scanned-img/cake.jpeg');"></div>
+      <div class="carousel-image" style="background-image: url('/assets/images/scanned-img/tree-2.jpg');"></div>
+    `;
 
-                clearTimeout(timer);
-                cursorText.style.display = "block";
+    const images = carouselContainer.querySelectorAll('.carousel-image');
+    let currentIndex = 0;
 
-                timer = setTimeout(() => {
-                    cursorText.style.display = "none";
-                }, 1000); // Adjust the timeout (in milliseconds) as needed
-            });
-        });
+    function showImage(index) {
+      images.forEach((image, i) => {
+        if (i === index) {
+          image.style.opacity = '1';
+        } else {
+          image.style.opacity = '0';
+        }
+      });
+    }
 
-    </script>
+    function nextImage() {
+      currentIndex = (currentIndex + 1) % images.length;
+      showImage(currentIndex);
+    }
+
+    setInterval(nextImage, 6000); // Change image every 6 seconds
+  } else {
+    // Handle other browsers or provide a fallback
+    console.log('This feature is only supported on Safari.');
+  }
+</script>
 </body>
-
 </html>
