--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     
 
-    <section class="landing-content">
+    <section id="landing-content">
 
         <section class="landing-banner">
             <h1 class="title" id="landing-banner-sp">
@@ -88,8 +88,8 @@
             </h2>
         </section>
 
-        <div>
-            <h3 id="cursorText" class="cursor-text" style="font-family: 'DM Mono', monospace; font-weight: 400; font-size: 10px; left: 10px; top: 0;">hover over image for motion</h3>
+        <div class="cursor-div">
+            <h3 id="cursorText" class="cursor-text hidden" style="font-family: 'DM Mono', monospace; font-weight: 400; font-size: 10px;">hover over image for motion</h3>
         </div>
 
         <section class="prj-grid">
@@ -344,11 +344,11 @@
 
         </section>
 
-        <div id="load-more"> load more </div>
+        <div id="load-more" style="display: none;"> load more </div>
         <div style="height: 150px;"></div>
 
         <footer>
-            <h4 style="font-family: 'DM Mono', monospace; font-size: 11px; font-weight: 300;">© 2024 WILFREDO HERRERA. ALL RIGHTS RESERVED</h4>
+            <h4>© 2024 WILFREDO HERRERA. ALL RIGHTS RESERVED</h4>
         </footer>
 
     </section>
