--- a/index.html
+++ b/index.html
@@ -29,12 +29,13 @@
     <div class="marquee" style="width: 100%; position: fixed; z-index: 1;" offset="0%">
         <div class="marquee-container" id="marqueeContainer">
             <div class="marquee-text" id="marqueeText">
-                HI HELLO AND WELCOME&nbsp; &nbsp;LOOK AROUND&nbsp; &nbsp;STAY A WHILE&nbsp; &nbsp;SOME ALBUMS YOU'LL ENJOY:&nbsp;
+                HI HELLO AND WELCOME&nbsp; &nbsp;STAY A WHILE&nbsp; &nbsp;LOOK AROUND&nbsp; &nbsp;HERE ARE SOME ALBUMS YOU MIGHT ENJOY:&nbsp; &nbsp;
                     Talkie Walkie (2004) by AIR&nbsp; &nbsp;
                     We've Been There (1978) by Mark and Suzann Farmer&nbsp; &nbsp;
                     hella (˃̣̣̥╭╮˂̣̣̥) ✧ ♡ ‧º·˚ (2024) by 1999 WRITE THE FUTURE&nbsp; &nbsp;
                     Viva! La Woman (1996) by Cibo Matto&nbsp; &nbsp;
                     The Awakening (1970) by Ahmad Jamal Trio&nbsp; &nbsp;
+                    Grapes Upon the Vine (2023) by TV Girl&nbsp; &nbsp;
 
             </div>
         </div>
