--- a/index.html
+++ b/index.html
@@ -26,18 +26,24 @@
         <div id="carouselContainer" class="carousel-container"></div>
     </section>
 
-    <div class="marquee" style="width: 100%; position: fixed; z-index: 1;" offset="0%">
-        <div class="marquee-container" id="marqueeContainer">
-            <div class="marquee-text" id="marqueeText">
-                HI HELLO AND WELCOME&nbsp; &nbsp;STAY A WHILE&nbsp; &nbsp;LOOK AROUND&nbsp; &nbsp;HERE ARE SOME ALBUMS YOU MIGHT ENJOY:&nbsp; &nbsp;
-                    Talkie Walkie (2004) by AIR&nbsp; &nbsp;
-                    We've Been There (1978) by Mark and Suzann Farmer&nbsp; &nbsp;
-                    hella (˃̣̣̥╭╮˂̣̣̥) ✧ ♡ ‧º·˚ (2024) by 1999 WRITE THE FUTURE&nbsp; &nbsp;
-                    Viva! La Woman (1996) by Cibo Matto&nbsp; &nbsp;
-                    The Awakening (1970) by Ahmad Jamal Trio&nbsp; &nbsp;
-                    Grapes Upon the Vine (2023) by TV Girl&nbsp; &nbsp;
-
-            </div>
+    <div class="marquee">
+        <div class="marquee-inner">
+            <span class="marquee-text">Hola welcome bienvenido &nbsp; Este es mi portafolio de arte creado utilizando diferentes medios &nbsp; Echa un vistazo &nbsp; Deja que tu cerebro se sumerja y se relaje &nbsp; intenta hacer clic en cualquier texto para traducciones &nbsp;
+            </span>
+            <span class="marquee-text">Hola welcome bienvenido &nbsp; Este es mi portafolio de arte creado utilizando diferentes medios &nbsp; Echa un vistazo &nbsp; Deja que tu cerebro se sumerja y se relaje &nbsp; intenta hacer clic en cualquier texto para traducciones &nbsp;
+            </span>
+            <!-- <span class="marquee-text">HI HELLO AND WELCOME&nbsp; &nbsp;CAN I INTEREST YOU IN SOME TUNES¬&nbsp;
+                The Navigator (2017) by Hurray for the Riff Raff&nbsp;
+                •&nbsp;
+                The Awakening (1970) by Ahmad Jamal Trio&nbsp;
+                •&nbsp;
+            </span> -->
+        </div>
+        <div class="marquee-inner" aria-hidden="true">
+            <span class="marquee-text">Hola welcome bienvenido &nbsp; Este es mi portafolio de arte creado utilizando diferentes medios &nbsp; Echa un vistazo &nbsp; Deja que tu cerebro se sumerja y se relaje &nbsp; intenta hacer clic en cualquier texto para traducciones &nbsp;
+            </span>
+            <span class="marquee-text">Hola welcome bienvenido &nbsp; Este es mi portafolio de arte creado utilizando diferentes medios &nbsp; Echa un vistazo &nbsp; Deja que tu cerebro se sumerja y se relaje &nbsp; intenta hacer clic en cualquier texto para traducciones &nbsp;
+            </span>
         </div>
     </div>
 
