--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 
     <div class="marquee">
         <div class="marquee-inner">
-            <span class="marquee-text">Hola welcome bienvenido &nbsp; Este es mi portafolio de arte creado utilizando diferentes medios &nbsp; Echa un vistazo &nbsp; Deja que tu cerebro se sumerja y se relaje &nbsp; intenta hacer clic en cualquier texto para traducciones &nbsp;
+            <span class="marquee-text">Hola welcome bienvenides a mi portfolio &nbsp; El arte exhibido aquí fue creado utilizando diferentes medios analogos y digital &nbsp; Echa un vistazo &nbsp; Deja que tu cerebro se sumerja y se relaje &nbsp; intenta hacer clic en cualquier texto para traducciones en ingles &nbsp;
             </span>
-            <span class="marquee-text">Hola welcome bienvenido &nbsp; Este es mi portafolio de arte creado utilizando diferentes medios &nbsp; Echa un vistazo &nbsp; Deja que tu cerebro se sumerja y se relaje &nbsp; intenta hacer clic en cualquier texto para traducciones &nbsp;
+            <span class="marquee-text">Hola welcome bienvenides a mi portfolio &nbsp; El arte exhibido aquí fue creado utilizando diferentes medios analogos y digital &nbsp; Echa un vistazo &nbsp; Deja que tu cerebro se sumerja y se relaje &nbsp; intenta hacer clic en cualquier texto para traducciones en ingles &nbsp;
             </span>
             <!-- <span class="marquee-text">HI HELLO AND WELCOME&nbsp; &nbsp;CAN I INTEREST YOU IN SOME TUNES¬&nbsp;
                 The Navigator (2017) by Hurray for the Riff Raff&nbsp;
@@ -40,9 +40,9 @@
             </span> -->
         </div>
         <div class="marquee-inner" aria-hidden="true">
-            <span class="marquee-text">Hola welcome bienvenido &nbsp; Este es mi portafolio de arte creado utilizando diferentes medios &nbsp; Echa un vistazo &nbsp; Deja que tu cerebro se sumerja y se relaje &nbsp; intenta hacer clic en cualquier texto para traducciones &nbsp;
+            <span class="marquee-text">Hola welcome bienvenides a mi portfolio &nbsp; El arte exhibido aquí fue creado utilizando diferentes medios analogos y digital &nbsp; Echa un vistazo &nbsp; Deja que tu cerebro se sumerja y se relaje &nbsp; intenta hacer clic en cualquier texto para traducciones en ingles &nbsp;
             </span>
-            <span class="marquee-text">Hola welcome bienvenido &nbsp; Este es mi portafolio de arte creado utilizando diferentes medios &nbsp; Echa un vistazo &nbsp; Deja que tu cerebro se sumerja y se relaje &nbsp; intenta hacer clic en cualquier texto para traducciones &nbsp;
+            <span class="marquee-text">Hola welcome bienvenides a mi portfolio &nbsp; El arte exhibido aquí fue creado utilizando diferentes medios analogos y digital &nbsp; Echa un vistazo &nbsp; Deja que tu cerebro se sumerja y se relaje &nbsp; intenta hacer clic en cualquier texto para traducciones en ingles &nbsp;
             </span>
         </div>
     </div>
@@ -65,7 +65,7 @@
         <section class="landing-welcome">
             <div style="display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center;">
                 <button id="enter">entrar</button>
-                <h3><em>chrome</em> or <em>firefox</em> recommended</h3>
+                <h3><em>chrome</em> o <em>firefox</em> recomendado</h3>
             </div>
         </section>
 
